# fastapi_postgres_project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: cd87dbb45d79_initial_migration.py  ef3ffa5b6e42_model_changes.py
app/: database.py  main.py
app/api/: candidate.py  report.py  user.py
app/models/: candidate.py  user.py
app/schemas/: candidate.py  user.py
app/utils/: helper.py
tests/: test_candidate.py  test_user.py
